<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gscam</name>
  <version>2.0.2</version>
  <description>
    A ROS camera driver that uses gstreamer to connect to
    devices such as webcams.
  </description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <license>Apache 2.0 License</license>

  <author email="jbo@jhu.edu">Jonathan Bohren</author>
  <author email="tjay@cs.brown.edu">Graylin Trevor Jay</author>
  <author email="chriscrick@cs.brown.edu">Christopher Crick</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libgstreamer1.0-dev</depend>
  <depend>libgstreamer-plugins-base1.0-dev</depend>

  <depend>class_loader</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>camera_info_manager</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>

